tests/grammar/snapshots/r#mod__grammar__alpha040__unclosed_command.snap
---
source: tests/grammar/alpha040.rs
expression: "compiler.tokenize(\"$echo test\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "echo test",
        ),
        1..10,
    ),
]
