tests/grammar/snapshots/r#mod__grammar__alpha040__unfinished_function_call-2.snap
---
source: tests/grammar/alpha040.rs
expression: result
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        5..11,
                    ),
                    (
                        "import",
                        5..11,
                    ),
                    (
                        ImportSpecific(
                            [
                                (
                                    "array_contains",
                                    14..28,
                                ),
                            ],
                        ),
                        12..30,
                    ),
                    (
                        "from",
                        31..35,
                    ),
                    (
                        "std/array",
                        36..47,
                    ),
                ),
                5..47,
            ),
            (
                Statement(
                    (
                        VariableInit(
                            (
                                "let",
                                53..56,
                            ),
                            (
                                "x",
                                57..58,
                            ),
                            (
                                Expression(
                                    (
                                        Array(
                                            [
                                                (
                                                    Number(
                                                        (
                                                            1.0,
                                                            62..63,
                                                        ),
                                                    ),
                                                    62..63,
                                                ),
                                                (
                                                    Number(
                                                        (
                                                            2.0,
                                                            65..66,
                                                        ),
                                                    ),
                                                    65..66,
                                                ),
                                                (
                                                    Number(
                                                        (
                                                            3.0,
                                                            68..69,
                                                        ),
                                                    ),
                                                    68..69,
                                                ),
                                            ],
                                        ),
                                        61..70,
                                    ),
                                ),
                                61..70,
                            ),
                        ),
                        53..70,
                    ),
                ),
                53..70,
            ),
            (
                Statement(
                    (
                        VariableInit(
                            (
                                "let",
                                75..78,
                            ),
                            (
                                "y",
                                79..80,
                            ),
                            (
                                Expression(
                                    (
                                        Number(
                                            (
                                                2.0,
                                                83..84,
                                            ),
                                        ),
                                        83..84,
                                    ),
                                ),
                                83..84,
                            ),
                        ),
                        75..84,
                    ),
                ),
                75..84,
            ),
            (
                Statement(
                    (
                        Echo(
                            (
                                "echo",
                                90..94,
                            ),
                            (
                                FunctionInvocation(
                                    [],
                                    (
                                        "array_contains",
                                        95..109,
                                    ),
                                    [
                                        (
                                            Var(
                                                (
                                                    "x",
                                                    110..111,
                                                ),
                                            ),
                                            110..111,
                                        ),
                                        (
                                            Var(
                                                (
                                                    "y",
                                                    113..114,
                                                ),
                                            ),
                                            113..114,
                                        ),
                                    ],
                                    None,
                                ),
                                95..115,
                            ),
                        ),
                        90..115,
                    ),
                ),
                90..115,
            ),
            (
                Statement(
                    (
                        VariableInit(
                            (
                                "let",
                                121..124,
                            ),
                            (
                                "line",
                                125..129,
                            ),
                            (
                                Expression(
                                    (
                                        Number(
                                            (
                                                213.0,
                                                132..135,
                                            ),
                                        ),
                                        132..135,
                                    ),
                                ),
                                132..135,
                            ),
                        ),
                        121..135,
                    ),
                ),
                121..135,
            ),
            (
                Statement(
                    (
                        IterLoop(
                            (
                                "for",
                                141..144,
                            ),
                            (
                                WithIndex(
                                    (
                                        "idx",
                                        145..148,
                                    ),
                                    (
                                        "line",
                                        150..154,
                                    ),
                                ),
                                145..154,
                            ),
                            (
                                "in",
                                155..157,
                            ),
                            (
                                FunctionInvocation(
                                    [],
                                    (
                                        "lines",
                                        158..163,
                                    ),
                                    [
                                        (
                                            Text(
                                                [
                                                    (
                                                        Text(
                                                            (
                                                                "text.txt",
                                                                165..173,
                                                            ),
                                                        ),
                                                        165..173,
                                                    ),
                                                ],
                                            ),
                                            164..174,
                                        ),
                                    ],
                                    None,
                                ),
                                158..175,
                            ),
                            (
                                Block(
                                    [],
                                    [
                                        (
                                            Echo(
                                                (
                                                    "echo",
                                                    184..188,
                                                ),
                                                (
                                                    Var(
                                                        (
                                                            "line",
                                                            189..193,
                                                        ),
                                                    ),
                                                    189..193,
                                                ),
                                            ),
                                            184..193,
                                        ),
                                    ],
                                ),
                                176..199,
                            ),
                        ),
                        141..199,
                    ),
                ),
                141..199,
            ),
            (
                Statement(
                    (
                        Comment(
                            (
                                Comment(
                                    "fun foo(x: Num, y: Text) {",
                                ),
                                205..235,
                            ),
                        ),
                        205..235,
                    ),
                ),
                205..235,
            ),
            (
                Statement(
                    (
                        Comment(
                            (
                                Comment(
                                    "}",
                                ),
                                240..245,
                            ),
                        ),
                        240..245,
                    ),
                ),
                240..245,
            ),
            (
                FunctionDefinition(
                    [],
                    (
                        false,
                        250..245,
                    ),
                    (
                        "fun",
                        250..253,
                    ),
                    (
                        "foo",
                        254..257,
                    ),
                    [
                        (
                            Typed(
                                (
                                    false,
                                    258..258,
                                ),
                                (
                                    "x",
                                    258..259,
                                ),
                                (
                                    Num,
                                    261..264,
                                ),
                            ),
                            258..264,
                        ),
                        (
                            Typed(
                                (
                                    false,
                                    266..265,
                                ),
                                (
                                    "y",
                                    266..267,
                                ),
                                (
                                    Text,
                                    269..273,
                                ),
                            ),
                            266..273,
                        ),
                    ],
                    None,
                    [],
                ),
                250..282,
            ),
            (
                Statement(
                    (
                        Comment(
                            (
                                Comment(
                                    "fun abc() {}",
                                ),
                                288..304,
                            ),
                        ),
                        288..304,
                    ),
                ),
                288..304,
            ),
            (
                Statement(
                    (
                        Expression(
                            (
                                FunctionInvocation(
                                    [],
                                    (
                                        "array_contains",
                                        309..323,
                                    ),
                                    [
                                        (
                                            Array(
                                                [
                                                    (
                                                        Number(
                                                            (
                                                                1.0,
                                                                325..326,
                                                            ),
                                                        ),
                                                        325..326,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                2.0,
                                                                328..329,
                                                            ),
                                                        ),
                                                        328..329,
                                                    ),
                                                    (
                                                        Number(
                                                            (
                                                                3.0,
                                                                331..332,
                                                            ),
                                                        ),
                                                        331..332,
                                                    ),
                                                ],
                                            ),
                                            324..333,
                                        ),
                                    ],
                                    None,
                                ),
                                309..335,
                            ),
                        ),
                        309..335,
                    ),
                ),
                309..335,
            ),
        ],
    ),
    [],
)
