tests/grammar/snapshots/r#mod__grammar__alpha040__unfinished_function_call.snap
---
source: tests/grammar/alpha040.rs
expression: tokens
---
[
    (
        Token(
            "import",
        ),
        5..11,
    ),
    (
        Token(
            "{",
        ),
        12..13,
    ),
    (
        Token(
            "array_contains",
        ),
        14..28,
    ),
    (
        Token(
            "}",
        ),
        29..30,
    ),
    (
        Token(
            "from",
        ),
        31..35,
    ),
    (
        Token(
            "\"",
        ),
        36..37,
    ),
    (
        Token(
            "std",
        ),
        37..40,
    ),
    (
        Token(
            "/",
        ),
        40..41,
    ),
    (
        Token(
            "array",
        ),
        41..46,
    ),
    (
        Token(
            "\"",
        ),
        46..47,
    ),
    (
        Token(
            "let",
        ),
        57..60,
    ),
    (
        Token(
            "x",
        ),
        61..62,
    ),
    (
        Token(
            "=",
        ),
        63..64,
    ),
    (
        Token(
            "[",
        ),
        65..66,
    ),
    (
        Token(
            "1",
        ),
        66..67,
    ),
    (
        Token(
            ",",
        ),
        67..68,
    ),
    (
        Token(
            "2",
        ),
        69..70,
    ),
    (
        Token(
            ",",
        ),
        70..71,
    ),
    (
        Token(
            "3",
        ),
        72..73,
    ),
    (
        Token(
            "]",
        ),
        73..74,
    ),
    (
        Token(
            "let",
        ),
        79..82,
    ),
    (
        Token(
            "y",
        ),
        83..84,
    ),
    (
        Token(
            "=",
        ),
        85..86,
    ),
    (
        Token(
            "2",
        ),
        87..88,
    ),
    (
        Token(
            "echo",
        ),
        98..102,
    ),
    (
        Token(
            "array_contains",
        ),
        103..117,
    ),
    (
        Token(
            "(",
        ),
        117..118,
    ),
    (
        Token(
            "x",
        ),
        118..119,
    ),
    (
        Token(
            ",",
        ),
        119..120,
    ),
    (
        Token(
            "y",
        ),
        121..122,
    ),
    (
        Token(
            ")",
        ),
        122..123,
    ),
    (
        Token(
            "let",
        ),
        133..136,
    ),
    (
        Token(
            "line",
        ),
        137..141,
    ),
    (
        Token(
            "=",
        ),
        142..143,
    ),
    (
        Token(
            "213",
        ),
        144..147,
    ),
    (
        Token(
            "for",
        ),
        157..160,
    ),
    (
        Token(
            "idx",
        ),
        161..164,
    ),
    (
        Token(
            ",",
        ),
        164..165,
    ),
    (
        Token(
            "line",
        ),
        166..170,
    ),
    (
        Token(
            "in",
        ),
        171..173,
    ),
    (
        Token(
            "lines",
        ),
        174..179,
    ),
    (
        Token(
            "(",
        ),
        179..180,
    ),
    (
        Token(
            "\"",
        ),
        180..181,
    ),
    (
        Token(
            "text",
        ),
        181..185,
    ),
    (
        Token(
            ".",
        ),
        185..186,
    ),
    (
        Token(
            "txt",
        ),
        186..189,
    ),
    (
        Token(
            "\"",
        ),
        189..190,
    ),
    (
        Token(
            ")",
        ),
        190..191,
    ),
    (
        Token(
            "{",
        ),
        192..193,
    ),
    (
        Token(
            "echo",
        ),
        200..204,
    ),
    (
        Token(
            "line",
        ),
        205..209,
    ),
    (
        Token(
            "}",
        ),
        214..215,
    ),
    (
        Token(
            "// fun foo(x: Num, y: Text) {\n",
        ),
        225..255,
    ),
    (
        Token(
            "// }\n",
        ),
        264..269,
    ),
    (
        Token(
            "fun",
        ),
        278..281,
    ),
    (
        Token(
            "foo",
        ),
        282..285,
    ),
    (
        Token(
            "(",
        ),
        285..286,
    ),
    (
        Token(
            "x",
        ),
        286..287,
    ),
    (
        Token(
            ":",
        ),
        287..288,
    ),
    (
        Token(
            "Num",
        ),
        289..292,
    ),
    (
        Token(
            ",",
        ),
        292..293,
    ),
    (
        Token(
            "y",
        ),
        294..295,
    ),
    (
        Token(
            ":",
        ),
        295..296,
    ),
    (
        Token(
            "Text",
        ),
        297..301,
    ),
    (
        Token(
            ")",
        ),
        301..302,
    ),
    (
        Token(
            "{",
        ),
        303..304,
    ),
    (
        Token(
            "}",
        ),
        309..310,
    ),
    (
        Token(
            "// fun abc() {}\n",
        ),
        320..336,
    ),
    (
        Token(
            "array_contains",
        ),
        345..359,
    ),
    (
        Token(
            "(",
        ),
        359..360,
    ),
    (
        Token(
            "[",
        ),
        360..361,
    ),
    (
        Token(
            "1",
        ),
        361..362,
    ),
    (
        Token(
            ",",
        ),
        362..363,
    ),
    (
        Token(
            "2",
        ),
        364..365,
    ),
    (
        Token(
            ",",
        ),
        365..366,
    ),
    (
        Token(
            "3",
        ),
        367..368,
    ),
    (
        Token(
            "]",
        ),
        368..369,
    ),
    (
        Token(
            ",",
        ),
        369..370,
    ),
    (
        Token(
            ")",
        ),
        370..371,
    ),
]
